--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,33 @@
 {
-  "name": "tedivm/fetch",
-  "description": "A PHP IMAP Library",
-  "keywords": ["email","imap","pop3"],
-  "homepage": "http://github.com/tedious/Fetch",
-  "type": "library",
-  "license": "BSD-3-Clause",
-  "authors": [
-    {
-      "name": "Robert Hafner",
-      "email": "tedivm@tedivm.com"
-    }
-  ],
-  "require": {
-    "php": ">=5.3.0"
-  },
-  "require-dev": {
-    "tedivm/dovecottesting": "1.2.3",
-    "phpunit/phpunit": "4.0.*",
-    "fabpot/php-cs-fixer": "0.4.0",
-    "satooshi/php-coveralls": "dev-master"
+    "name": "sunilkjaiswal/fetch",
+    "description": "A PHP IMAP Library",
+    "keywords": ["email", "imap", "pop3"],
+    "homepage": "http://github.com/sunilkjaiswal/Fetch",
+    "type": "library",
+    "license": "BSD-3-Clause",
+    "authors": [
+        {
+            "name": "Robert Hafner",
+            "email": "tedivm@tedivm.com"
+        },
+        {
+            "name": "Sunil Jaiswal",
+            "email": "sunil@suniljaiswal.com"
+        }
+    ],
+    "require": {
+        "php": ">=5.3.0"
+    },
+    "require-dev": {
+        "tedivm/dovecottesting": "1.2.3",
+        "phpunit/phpunit": "4.0.*",
+        "fabpot/php-cs-fixer": "0.4.0",
+        "satooshi/php-coveralls": "dev-master"
 
     },
-  "autoload": {
-    "psr-0": {"Fetch": "src/"}
-  }
+    "autoload": {
+        "psr-0": {
+            "Fetch": "src/"
+        }
+    }
 }
